syntax = "proto3";

package ynpb;

option go_package = "github.com/yanet-platform/yanet2/controlplane/ynpb;ynpb";

// TODO: docs
service DeviceService {
	// Lists all configured devices
	rpc List(ListDevicesRequest) returns (ListDevicesResponse);
}

message ListDevicesRequest {
	uint32 instance = 1;
}

message ListDevicesResponse {
	repeated DeviceId ids = 1;
}

message DeviceId {
	string type = 1;
	string name = 2;
}
